<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F8FAFC">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100dp"
            android:id="@+id/back"
            android:backgroundTint="#22C55E"
            android:textColor="#FFFFFF"
            android:text="@string/back"/>
        <LinearLayout
            android:id="@+id/saved_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginEnd="60dp"
                android:text="@string/farm_info"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="100dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/farm_name"
            android:text="@string/farm_name"
            android:tooltipText="Farm Name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/farm_photos"
            android:layout_width="200dp"
            android:layout_height="200dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:id="@+id/images_layout"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-20dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="100dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location"
            android:text="Location" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact"
            android:text="Contact" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:text="Description"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/reviews"
            android:backgroundTint="#22C55E"
            android:textColor="#FFFFFF"
            android:text="Reviews"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/buy"
            android:backgroundTint="#22C55E"
            android:textColor="#FFFFFF"
            android:text="Buy from Farm"/>
    </LinearLayout>
</LinearLayout>